--- a/aks2demo.yml
+++ b/aks2demo.yml
@@ -18,6 +18,7 @@ spec:
         ports:
         - containerPort: 80
 
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -27,5 +28,5 @@ spec:
   selector:
     app: my-app
   ports:
-      port: 80
+    - port: 80
       targetPort: 80
