--- a/aks2demo.yml
+++ b/aks2demo.yml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: aks2demo
+  name: aksdemo1
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: aksdemonginx
+      app: myimage
   template:
     metadata:
       labels:
-        app: aksdemonginx
+        app: myimage
     spec:
       containers:
-      - name: aksdemonginx
-        image: demoproject2aks.azurecr.io/aksdemonginx
+      - name: myimage
+        image: demo2project.azurecr.io/myimage:v1
         ports:
         - containerPort: 80
 
@@ -22,11 +22,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-service
+  name: myservice1
 spec:
   type: LoadBalancer
   selector:
-    app: my-app
+    app: myimage
   ports:
     - port: 80
       targetPort: 80
